# scurl

./: .env.example  .gitignore  .gitignore-summary.md  ANIMATIONS.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MIGRATION.md  Makefile  NETWORK.md  QUICKSTART.md  README.md  SECURITY.md  USAGE.md  verify-gitignore.sh
.githooks/: pre-commit
.github/workflows/: release.yml  rust.yml
examples/: realistic-example.sh  safe-example.sh  suspicious-example.sh
src/: analysis.rs  audit.rs  cache.rs  commands.rs  config.rs  container.rs  helpers.rs  main.rs  network.rs  provider.rs  sandbox.rs  static_analysis.rs
tests/: integration_test.rs
