[package]
name = "scurl"
version = "0.1.0"
edition = "2021"
authors = ["scurl contributors"]
description = "Secure curl - AI-powered security review for install scripts"
license = "MIT"

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
colored = "2.1"
tempfile = "3.10"
toml = "0.8"
dirs = "5.0"
indicatif = "0.17"
